@@ -2106,3 +2106,5 @@ Jan Wienold updated evalglare to version 1.30
 
 Roland Schregle added out-of-core photon mapping routines, which
 may be compiled using the PMAP_OOC macro.
+
+Added -a option to getinfo for easy addition of header lines.
